--- a/src/main/resources/errors_de.properties
+++ b/src/main/resources/errors_de.properties
@@ -3,7 +3,7 @@ org.apache.commons.cli.ParseException = Command Line Argumente konnten nicht ver
 com.tngtech.configbuilder.exception.TargetTypeException = Feld %s vom Typ %s kann nicht mit dem Objekt %s besetzt werden.
 java.lang.InstantiationException = InstantiationException beim Instantiieren der Config Klasse.
 java.lang.reflect.InvocationTargetException = InvocationTargetException beim instantiieren der Config Klasse.
-java.lang.IllegalAccessException = IllegalAccessException  beim Instantiieren der Config Klasse oder setzen eines Feldes.
+java.lang.IllegalAccessException = IllegalAccessException  beim Instantiieren der Config Klasse, setzen eines Feldes oder Aufruf der Validierungs-Methoden
 com.tngtech.configbuilder.exception.ValidatorException = Beim Validieren wurden die folgenden Constraint Violations gefunden:
 java.lang.IllegalArgumentException = Feld %s vom Typ %s kann nicht mit dem Objekt %s besetzt werden.
 standardMessage = Es gab eine Exception vom Typ %s
