fixed "CLI parser exceptions are not mapped to a message"

--- a/src/main/resources/errors_de.properties
+++ b/src/main/resources/errors_de.properties
@@ -1,5 +1,6 @@
 com.tngtech.configbuilder.exception.NoConstructorFoundException = Die Config Klasse hat keinen Constructor, der zu den Argumenten von build() passt.
 org.apache.commons.cli.ParseException = Command Line Argumente konnten nicht verarbeitet werden.
+org.apache.commons.cli.UnrecognizedOptionException = Eine oder mehrere Kommandozeilen-Optionen wurden nicht erkannt.
 com.tngtech.configbuilder.exception.TargetTypeException = Feld %s vom Typ %s kann nicht mit dem Objekt %s besetzt werden.
 java.lang.InstantiationException = InstantiationException beim Instantiieren der Config Klasse.
 java.lang.reflect.InvocationTargetException = InvocationTargetException beim instantiieren der Config Klasse.
