--- a/src/main/resources/errors_de.properties
+++ b/src/main/resources/errors_de.properties
@@ -6,4 +6,5 @@ java.lang.reflect.InvocationTargetException = InvocationTargetException beim ins
 java.lang.IllegalAccessException = IllegalAccessException  beim Instantiieren der Config Klasse, setzen eines Feldes oder Aufruf der Validierungs-Methoden
 com.tngtech.configbuilder.exception.ValidatorException = Beim Validieren wurden die folgenden Constraint Violations gefunden:
 java.lang.IllegalArgumentException = Feld %s vom Typ %s kann nicht mit dem Objekt %s besetzt werden.
+com.tngtech.configbuilder.exception.TypeTransformerException = Konnte keinen Transformer von %s nach %s finden
 standardMessage = Es gab eine Exception vom Typ %s
